--- a/index.html
+++ b/index.html
@@ -74,12 +74,15 @@
         <div class="glass-card animate__animated animate__zoomIn">
             <div class="text-center mb-4">
                 <div class="bg-primary text-white rounded-4 d-inline-block p-3 mb-3"><i class="fas fa-store fa-2x"></i></div>
-                <h4 class="fw-bold">Lesehan Lamacca</h4>
-                <p class="text-muted small">Cukup Masukkan Nama & WhatsApp</p>
+                <h4 class="fw-bold">LESEHAN MACCA</h4>
+                <p class="animate__animated animate__fadeInUp animate__delay-1s" 
+   style="font-size: 14px; color: #004aad; font-weight: 600; font-style: italic; margin-top: -5px; margin-bottom: 20px;">
+   "Citarasa Autentik, Pesan Mudah dari Mana Saja"
+</p>
             </div>
             <div class="mb-3">
                 <label class="small fw-bold text-muted">Nama Lengkap</label>
-                <input type="text" id="waNama" class="form-control rounded-pill px-3" placeholder="Contoh: Budi Santoso">
+                <input type="text" id="waNama" class="form-control rounded-pill px-3" placeholder="Contoh: Lesehan Macca">
             </div>
             <div class="mb-4">
                 <label class="small fw-bold text-muted">Nomor WhatsApp</label>
