--- a/index.html
+++ b/index.html
@@ -172,10 +172,7 @@
             </div>
         </div>
 
-        <<a href="https://wa.me/6282191262682?text=Halo%20saya%20mau%20pesan"
-   class="whatsapp-float" target="_blank">
-   <i class="fab fa-whatsapp"></i>
-</a>
+        <a href="https://wa.me/6282191262682" class="whatsapp-float animate__animated animate__bounceIn" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
         <div class="cart-bar animate__animated animate__fadeInUp" id="cartBar" onclick="processCheckout()">
             <div class="d-flex align-items-center"><div class="bg-white text-primary rounded-pill px-3 fw-bold me-2" id="cartQty">0</div><span class="small fw-bold">Checkout Pesanan</span></div>
@@ -210,7 +207,7 @@
         const TOKO_LNG = 119.5002886;
         const TARIF_PER_KM = 2000;    
         const MIN_ONGKIR = 5000;      
-        const MIN_BELANJA_FREE = 50000;
+        const MIN_BELANJA_FREE = 100000;
 
         let userData = null;
         let masterMenu = [];
