--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 b.innerHTML = `
                     <div class="animate__animated animate__fadeIn text-center mt-2">
                         <p class="mb-2 fw-bold" style="font-size:12px;">Scan QRIS Lesehan Lamacca:</p>
-                        <img src="https://i.ibb.co.com/mC8SDk1j/Whats-App-Image-2026-01-01-at-16-20-37.jpg" 
+                        <img src="https://chuacarangki.github.io/toko_macca_kasir/qrismacca.jpeg" 
                              class="img-fluid rounded border shadow-sm p-2 bg-white" 
                              style="width: 180px; height: auto;">
                         <p class="mt-2 mb-0 fw-bold text-danger" style="font-size:10px;">
