--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         </div>
         <div class="mb-3">
             <label class="small fw-semibold text-muted">Nama Lengkap</label>
-            <input type="text" id="waNama" class="form-control rounded-pill px-4 py-2.5" placeholder="Contoh: Andi Saputra">
+            <input type="text" id="waNama" class="form-control rounded-pill px-4 py-2.5" placeholder="Contoh: Macca">
         </div>
         <div class="mb-4">
             <label class="small fw-semibold text-muted">Nomor WhatsApp</label>
@@ -1160,3 +1160,4 @@ window.toggleAlamatToko = (isJemput) => {
 </script>
 </body>
 </html>
+
